<resources>
    <string name="app_name">Flicker</string>

    <string name="rating">5.0 / 10</string>
    <string name="vote">Votes</string>
    <string name="date">Date : </string>
    <string name="overview">OVERVIEW</string>
    <string name="trailer">TRAILER</string>
    <string name="casts">CASTS</string>
    <string name="reviews">REVIEWS</string>
    <string name="overviewall">A volcanic eruption threatens the remaining dinosaurs on the island of Isla Nublar, where the creatures have freely roamed for several years after the demise of an animal theme park known as Jurassic World. Claire Dearing, the former park manager, has now founded the Dinosaur Protection Group, an organization dedicated to protecting the dinosaurs. To help with her cause, Claire has recruited Owen Grady, a former dinosaur trainer who worked at the park, to prevent the extinction of the dinosaurs once again.</string>
    <string name="settings">Settings</string>
    <string name="fav">Favorites</string>
    <string name="add_to_favorite">ADD TO YOUR FAVORITE LIST</string>
    <string name="way_to_hollywood">Way  for  hollywood</string>
    <string name="noReviews">There is no reviews for this movie.</string>
    <string name="movie_title">Movie Title</string>
    <string name="animeTitle">Anime Title</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="language">Language</string>
    <string name="animeDescription">Anime Description</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="google_udacity_scholarship">Google Udacity Scholarship</string>
    <string name="welcome_text_one">Developed Under Udacity\'s Nanodegree Program with the help of Google India Scholarship</string>

    <style name="popular">Popular</style>

    <style name="top_rated">Top Rated</style>

    <style name="up_coming">Up Coming</style>

    <style name="now_playing">Now Playing</style>
</resources>
