<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grad_bg"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:context=".activity.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBar"
        android:background="@drawable/grad_bg"
        android:id="@+id/appbarlayout_id">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsing_toolbar_id"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/ctlMStart"
            app:title="Anime Title"
            app:expandedTitleMarginEnd="@dimen/ctlMEnd"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tendp"
                    android:background="@drawable/draw_circle_background"
                    android:src="@drawable/ic_back_button"/>

                <com.like.LikeButton
                    app:icon_type="Star"
                    app:icon_size="23dp"
                    android:id="@+id/fav_button"
                    android:layout_marginTop="@dimen/five_dp"
                    android:layout_marginBottom="@dimen/five_dp"
                    android:layout_marginStart="@dimen/five_dp"
                    android:layout_width="@dimen/likeButton"
                    android:layout_alignParentRight="true"
                    android:layout_height="@dimen/likeButton"
                    app:circle_start_color="@color/liteYellow"
                    app:dots_primary_color="@color/liteRed"
                    app:dots_secondary_color="@color/liteYellow"
                    app:circle_end_color="@color/liteRed"
                    app:liked="true"
                    app:anim_scale_factor="2"/>

                    <!--<com.like.LikeButton-->
                        <!--app:icon_type="Star"-->
                        <!--android:layout_height="60dp"-->
                        <!--android:layout_width="60dp"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:id="@+id/fav_button"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:layout_marginStart="5dp"-->
                        <!--app:circle_start_color="@color/colorPrimary"-->
                        <!--app:like_drawable="@drawable/thumb_on"-->
                        <!--app:unlike_drawable="@drawable/thumb_off"-->
                        <!--app:dots_primary_color="@color/colorAccent"-->
                        <!--app:dots_secondary_color="@color/colorPrimary"-->
                        <!--app:circle_end_color="@color/colorAccent"-->
                        <!--app:icon_size="25dp"-->
                        <!--app:liked="true"-->
                        <!--app:anim_scale_factor="2"-->
                        <!--app:is_enabled="false"-->
                        <!--/>-->

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingLeft="@dimen/tendp"
        android:layout_marginBottom="@dimen/tendp"
        android:background="@drawable/grad_bg"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/tendp"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp">

                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/card_one_w"
                    android:layout_height="@dimen/card_one_h"
                    android:elevation="@dimen/twenty_dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="@dimen/five_dp"
                    android:clipToPadding="true"
                    android:fitsSystemWindows="true"
                    tools:targetApi="lollipop">

                <ImageView
                    android:layout_width="@dimen/img_view_w"
                    android:layout_height="@dimen/img_view_h"
                    android:fitsSystemWindows="true"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/avengers"
                    android:transitionName="Flicker"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/poster"/>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/eight_dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_title"
                        android:textSize="@dimen/twelve_sp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/five_dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_name"
                        tools:text="@string/animeTitle"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/five_dp"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:textColor="@color/white"
                        android:textSize="@dimen/t_five_dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/tendp"
                        android:layout_marginStart="@dimen/five_dp"
                        android:textSize="@dimen/twelve_sp" />

                    <TextView
                        android:layout_marginTop="@dimen/three_dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/release_date"
                        android:layout_marginStart="@dimen/five_dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:id="@+id/releaseDate"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/five_dp"
                        android:layout_marginTop="@dimen/tendp"
                        android:textSize="@dimen/twelve_sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/vote"
                        tools:text="@string/rating"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/three_dp"
                        android:textSize="@dimen/fifteen_dp"
                        android:layout_marginStart="@dimen/five_dp"
                        android:textStyle="bold"
                        android:drawableStart="@drawable/ic_star_rating" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/tendp"
                        android:layout_marginStart="@dimen/five_dp"
                        android:textSize="@dimen/twelve_sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="en"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/five_dp"
                        android:layout_marginTop="@dimen/three_dp"
                        android:id="@+id/language"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="20dp"
                android:background="@color/darkView"/>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_margin="10dp">-->

                <!--&lt;!&ndash;<com.like.LikeButton&ndash;&gt;-->
                    <!--&lt;!&ndash;app:icon_type="heart"&ndash;&gt;-->
                    <!--&lt;!&ndash;app:icon_size="23dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/fav_button"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginTop="5dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginBottom="5dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginStart="5dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="60dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="60dp"/>&ndash;&gt;-->

            <!--</LinearLayout>-->

        <TextView
            android:text="@string/overview"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="@dimen/tv_overview"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_movie_filter_black_24dp"
            android:layout_height="wrap_content" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                tools:text="@string/animeDescription"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/five_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/overview"
                android:textColor="@color/white"
                app:trimExpandedText="Show more"
                app:trimCollapsedText="Show less"
                app:trimMode="trimModeLine"
                app:trimLines="2"
                app:colorClickableText="@color/darkView"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginBottom="@dimen/tendp"
                android:background="@color/darkView"/>

            <TextView
                android:text="@string/casts"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/t_three_dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_casts"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_casts"
                android:scrollbarStyle="insideInset"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:targetApi="lollipop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:layout_marginBottom="@dimen/tendp"
                android:background="@color/darkView"/>

            <TextView
                android:text="@string/reviews"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/t_three_dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_reviews"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_reviews"
                android:scrollbarStyle="insideInset"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:targetApi="lollipop"/>

            <TextView
                android:id="@+id/noReviews"
                android:text="@string/noReviews"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_width="match_parent"
                android:textSize="@dimen/fifteen_sp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="@dimen/tendp"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/darkView"/>

            <TextView
                android:text="@string/trailer"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/t_three_dp"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_trailer"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_trailers"
                android:scrollbarStyle="insideInset"
                android:nestedScrollingEnabled="true"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="@dimen/thirty_dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:targetApi="lollipop"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>