<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat"
            app:toolbarId="@+id/toolbar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_background"
                app:layout_collapseMode="parallax"
                android:alpha="0.6" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/app_name"
                app:layout_scrollFlags="scroll|enterAlways"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:src="@drawable/movie_logo"/>

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:fitsSystemWindows="true"
                app:tabTextColor="#fff"
                app:tabSelectedTextColor="#D6EAF8"
                android:pointerIcon="vertical_double_arrow"
                app:tabGravity="fill"
                app:tabMode="scrollable"
                tools:targetApi="n"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">


                <android.support.design.widget.TabItem
                    android:id="@+id/popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TabItem
                    android:id="@+id/top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TabItem
                    android:id="@+id/now_playing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TabItem
                    android:id="@+id/up_coming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TabLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"  />

    <include layout="@layout/content_main" />

    </android.support.design.widget.CoordinatorLayout>

    <View
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2FFFFFF"
        android:visibility="gone" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/card_margin"
        app:menu_labels_showShadow="true"
        app:menu_openDirection="up"
        app:menu_colorRipple="@color/viewBg"
        app:menu_colorNormal="@color/colorPrimary"
        app:menu_labels_textColor="@color/viewBg"
        app:menu_colorPressed="@color/colorPrimary">

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/settings"
            app:fab_size="mini"
            android:src="@drawable/settings"
            app:fab_colorNormal="@color/colorPrimary"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/fab_action_button_settings"/>

        <com.github.clans.fab.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_label="@string/fav"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_size="mini"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/fav"
            android:id="@+id/fab_action_button_fav"/>

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>